<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">儲存偏好設定</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="inputPlaceHolder">請輸入預存文字</string>
    <string name="savebtn">儲存</string>
    <string name="loadbtn">載入</string>
    <string name="defaultResult">預存文字</string>
    <string name="extbtn">離開</string>

</resources>
